--- a/Exam-70-783/2.4 IEnumerable/2.4 IEnumerable.csproj
+++ b/Exam-70-783/2.4 IEnumerable/2.4 IEnumerable.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="NRLTeams.cs" />
     <Compile Include="NRLTeamsEnum.cs" />
+    <Compile Include="Pessoa.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Team.cs" />
