--- a/Exam-70-783/4.3 LINQ Distinct Method Custom/4.3 LINQ.csproj
+++ b/Exam-70-783/4.3 LINQ Distinct Method Custom/4.3 LINQ.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{B935EB30-BB28-4BBD-B30E-A4FEF5A30BDD}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_4._3_LINQ_Distinct_Method_Custom</RootNamespace>
-    <AssemblyName>4.3 LINQ Distinct Method Custom</AssemblyName>
+    <RootNamespace>_4._3_LINQ</RootNamespace>
+    <AssemblyName>4.3 LINQ</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -43,7 +43,6 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="State.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
