Refatorar maps de arquivos quaisquer usando regex

--- a/Exam-70-783/4.1 File/4.1 File.csproj
+++ b/Exam-70-783/4.1 File/4.1 File.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileRead.cs" />
+    <Compile Include="FileUpdate.cs" />
     <Compile Include="FileWrite.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
